--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
         </nav>
     </header>
     <main>
-
+        <div class="banner">
+            <div class="banner-2">
+                <div class="banner-content">
+                    <h1>Digital Agency You
+                        Can Rely Upon !</h1>
+                    <p>Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, semper metus, nibh adipisci
+                        assumenda odio, quos, senectus vehicula occaecat, officiis malesuada cras.</p>
+                    <div class="button">
+                        <button class="btn-primary">Discover me</button>
+                        <button class="btn-secondary">Hireme NOw</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
