2nd banner added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,35 @@
                 </div>
             </div>
         </div>
+        <div class="klsdfaj">
+            <div class="div-1">
+                <button class="btn-primary">Hireus Now</button>
+                <h1>Services We Can Help You With !</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus velit omnis voluptate, iusto
+                    libero quibusdam amet aliquam deserunt odit minus?</p>
+                <ol>
+                    <li>libero quibusdam amet aliquam deserunt odit minus?</li>
+                    <li>libero quibusdam amet aliquam deserunt odit minus?</li>
+                </ol>
+                <div class="profile">
+                    <div class="picture">
+                        <img src="./asset/image/author.jpg" alt="">
+                        <h5>Habi jabi Islam <br> Ceo of the </h5>
+                    </div>
+                    <div class="btn-div">
+                        <button class="btn-secondary">Hireme NOw</button>
+                    </div>
+                </div>
+            </div>
+            <div class="div-2">
+                <div class="first-one">
+                    <div class="card">
+                        <img class="icon" src="./asset/icons/bar-chart.png" alt="">
+                        <h3>this is a iocn</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
