2nd banner added

--- a/index.html
+++ b/index.html
@@ -62,8 +62,22 @@
                     </div>
                 </div>
             </div>
-            <div class="div-2">
+            <div class="div-icon">
                 <div class="first-one">
+                    <div class="card">
+                        <img class="icon" src="./asset/icons/bar-chart.png" alt="">
+                        <h3>this is a iocn</h3>
+                    </div>
+                    <div class="card">
+                        <img class="icon" src="./asset/icons/bar-chart.png" alt="">
+                        <h3>this is a iocn</h3>
+                    </div>
+                </div>
+                <div class="first-one">
+                    <div class="card">
+                        <img class="icon" src="./asset/icons/bar-chart.png" alt="">
+                        <h3>this is a iocn</h3>
+                    </div>
                     <div class="card">
                         <img class="icon" src="./asset/icons/bar-chart.png" alt="">
                         <h3>this is a iocn</h3>
